--- a/ClientWebApp/Pages/Home.razor
+++ b/ClientWebApp/Pages/Home.razor
@@ -1,8 +1,26 @@
-﻿@page "/"
+﻿@using ClientWebApp.Model
+@using ClientWebApp.Managers
 
+@inject HttpManager manager
+
+@page "/"
+
+<ScreenComponent OnScreenSizeChanged="@CambiaDimensione"/>
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
 
 <RadzenButton Icon="add" Text="ciao"/>
 Welcome to your new app.
+
+
+@code{
+
+
+
+
+    private void CambiaDimensione(ScreenDimension? dimension){
+        dim = dimension;
+        Console.WriteLine(dimension);
+    }
+}
