--- a/ClientWebApp/Components/Categories/TableCategories.razor
+++ b/ClientWebApp/Components/Categories/TableCategories.razor
@@ -1,11 +1,12 @@
 ﻿@using ClientWebApp.Managers
+@using Shared;
 
 @inject HttpManager HttpManager
 @inject DialogService DialogService
 
 @if (initialLoading)
 {
-    <Loading />
+    @*<Loading />*@
 }
 else
 {
@@ -17,13 +18,13 @@ else
         <RadzenFieldset Text="Categorie" class="shadow rounded" Style="font-weight:400;">
             <RadzenButton Icon="add" Text="Nuovo" ButtonStyle="ButtonStyle.Primary" class="ButtonAdd"
                           Style="margin-bottom:2rem;margin-top:1rem;" Click="@(()=>OpenNewForm())" />
-            <RadzenDataGrid @ref="grid" GridLines="@DataGridGridLines.Both" IsLoading=@isLoading Count="@count" PageSize="@pageSize" Data="@lista" TItem="CategoryModel"
+            <RadzenDataGrid @ref="grid" GridLines="@DataGridGridLines.Both" IsLoading=@isLoading Count="@count" PageSize="@pageSize" Data="@categories" TItem="CategoryModel"
                             AllowColumnResize="true" AllowAlternatingRows="true" ColumnWidth="200px" AllowFiltering="true" FilterMode="FilterMode.Simple"
                             AllowSorting="true" AllowPaging="true" ShowPagingSummary="true" PagingSummaryFormat="@pagingSummaryFormat" PagerHorizontalAlign="HorizontalAlign.Left">
 
                 <Columns>
                     <RadzenDataGridColumn TItem="CategoryModel" Property="Id" Title="Id" Width="40px" />
-                    <RadzenDataGridColumn TItem="CategoryModel" Property="Nome" Title="Nome" />
+                    <RadzenDataGridColumn TItem="CategoryModel" Property="Text" Title="Nome" />
 
                     <RadzenDataGridColumn TItem="CategoryModel" Title="Azioni" Width="60px" Sortable="false">
                         <Template Context="data">
