--- a/ClientWebApp/Components/Subjects/TableSubjects.razor
+++ b/ClientWebApp/Components/Subjects/TableSubjects.razor
@@ -15,18 +15,18 @@ else
     @* La tabella delle formazioni *@
     <div class="mt-4 m-5">
 
-        <RadzenFieldset Text="Categorie" class="shadow rounded" Style="font-weight:400;">
+        <RadzenFieldset Text="Argomenti" class="shadow rounded" Style="font-weight:400;">
             <RadzenButton Icon="add" Text="Nuovo" ButtonStyle="ButtonStyle.Primary" class="ButtonAdd"
                           Style="margin-bottom:2rem;margin-top:1rem;" Click="@(()=>OpenNewForm())" />
-            <RadzenDataGrid @ref="grid" GridLines="@DataGridGridLines.Both" IsLoading=@isLoading Count="@count" PageSize="@pageSize" Data="@categories" TItem="CategoryModel"
+            <RadzenDataGrid @ref="grid" GridLines="@DataGridGridLines.Both" IsLoading=@isLoading Count="@count" PageSize="@pageSize" Data="@subjects" TItem="SubjectModel"
                             AllowColumnResize="true" AllowAlternatingRows="true" ColumnWidth="200px" AllowFiltering="true" FilterMode="FilterMode.Simple"
                             AllowSorting="true" AllowPaging="true" ShowPagingSummary="true" PagingSummaryFormat="@pagingSummaryFormat" PagerHorizontalAlign="HorizontalAlign.Left">
 
                 <Columns>
-                    <RadzenDataGridColumn TItem="CategoryModel" Property="Id" Title="Id" Width="40px" />
-                    <RadzenDataGridColumn TItem="CategoryModel" Property="Text" Title="Nome" />
+                    <RadzenDataGridColumn TItem="SubjectModel" Property="Id" Title="Id" Width="40px" />
+                    <RadzenDataGridColumn TItem="SubjectModel" Property="Text" Title="Nome" />
 
-                    <RadzenDataGridColumn TItem="CategoryModel" Title="Azioni" Width="60px" Sortable="false">
+                    <RadzenDataGridColumn TItem="SubjectModel" Title="Azioni" Width="60px" Sortable="false">
                         <Template Context="data">
                             @* Mostro i bottoni solo se ho i permessi di modifica *@
                             <RadzenButton Icon="edit" ButtonStyle="ButtonStyle.Light" Variant="Variant.Filled" Size="ButtonSize.Large"
