--- a/ClientWebApp/Pages/CategoriesPage.razor
+++ b/ClientWebApp/Pages/CategoriesPage.razor
@@ -1,5 +1,8 @@
-﻿<h3>CategoriesPage</h3>
+﻿@using ClientWebApp.Components.Subjects;
 
-@code {
+@page "/categories"
 
-}
+<h3>CategoriesPage</h3>
+
+<TableSubjects />
+
