--- a/ClientWebApp/Components/Categories/TableCategories.razor
+++ b/ClientWebApp/Components/Categories/TableCategories.razor
@@ -1,8 +1,6 @@
-﻿@using ClientWebApp.Managers
-@using ClientWebApp.Repositories
+﻿@using ClientWebApp.Repositories
 @using Shared;
 
-@inject HttpManager HttpManager
 @inject CategoriesRepository CategoriesRepository
 @inject DialogService DialogService
 
@@ -14,7 +12,7 @@ else
 {
     <h2>@Param</h2>
 
-    @* La tabella delle formazioni *@
+    @* La tabella delle Categorie *@
     <div class="mt-4 m-5">
 
         <RadzenFieldset Text="Categorie" class="shadow rounded" Style="font-weight:400;">
