--- a/ClientWebApp/Components/FormCreation/FormCreation.razor
+++ b/ClientWebApp/Components/FormCreation/FormCreation.razor
@@ -1,5 +1,32 @@
-﻿<h3>FormCreation</h3>
+﻿@using ClientWebApp.Managers
+@using ClientWebApp.Repositories
+@using Shared;
 
-@code {
+@inject CategoriesRepository CategoriesRepository
+@inject DialogService DialogService
+
+@if (initialLoading)
+{
+    <Loading />
+}
+else
+{
+    <h2>@Param</h2>
+
+    <div class="mt-4 m-5">
+    @foreach(var category in categories)
+    {
+        <RadzenCheckBoxList class="fw-bold" @bind-Value=@selected AllowSelectAll="true" SelectAllText=@category.Text TValue="int" Orientation="Orientation.Vertical" >
+        <Items> 
+        @foreach(var question in category.Questions)
+        {
+            <RadzenCheckBoxListItem class="ps-3 fw-normal" Text=@question.Text Value=@question.Id />
+        }
+        </Items>
+        </RadzenCheckBoxList> 
+    }
+    </div>
 
 }
+
+    
