--- a/ClientWebApp/Layout/NavMenu.razor
+++ b/ClientWebApp/Layout/NavMenu.razor
@@ -36,7 +36,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="form_creation">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Categorie
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Creazione form
             </NavLink>
         </div>
     </nav>
