--- a/ClientWebApp/Components/FormCreation/FormCreation.razor
+++ b/ClientWebApp/Components/FormCreation/FormCreation.razor
@@ -12,21 +12,25 @@
 else
 {
     <h2>@Param</h2>
-
+    
     <div class="mt-4 m-5">
-        @foreach (var s in selected)
-        {
-            <RadzenCheckBoxList Value="@s.QuestionIds" class="fw-bold" AllowSelectAll="true" SelectAllText=@s.Text TValue="int" Orientation="Orientation.Vertical">
-                <Items>
-                    @foreach(var q in s.Questions)
-                    {
-                        <RadzenCheckBoxListItem class="ps-3 fw-normal" Value="@q.Id" Text="@q.Text" />
-                    }
+        <RadzenFieldset Text="Seleziona le domande" class="shadow rounded" Style="font-weight:400;">
+            @foreach (var s in selected)
+            {
+                <RadzenCheckBoxList Value="@s.SelectedQuestionIds" class="fw-bold" AllowSelectAll="true" SelectAllText=@s.Text TValue="int" Orientation="Orientation.Vertical">
+                    <Items>
+                        @foreach(var q in s.Questions)
+                        {
+                            <RadzenCheckBoxListItem class="ps-3 fw-normal" Value="@q.Id" Text="@q.Text" />
+                        }
 
-                </Items>
-            </RadzenCheckBoxList>
-            first = false;
-        }
+                    </Items>
+                </RadzenCheckBoxList>
+                first = false;
+            }
+        </RadzenFieldset>
+        <RadzenButton Icon="add" Text="Crea modulo" ButtonStyle="ButtonStyle.Primary" class="ButtonAdd"
+                          Style="margin-bottom:2rem;margin-top:1rem;" Click="@(()=>CreateForm())" />
     </div>
 
 }
