--- a/ClientWebApp/Pages/QuestionPage.razor
+++ b/ClientWebApp/Pages/QuestionPage.razor
@@ -1,8 +1,7 @@
-﻿@using ClientWebApp.Components.Subjects;
+﻿@using ClientWebApp.Components.Questions;
 
 @page "/questions"
 
 <h3>QuestionPage</h3>
 
-<TableSubjects />
-
+<TableQuestion />
