--- a/ClientWebApp/Components/Questions/TableQuestion.razor
+++ b/ClientWebApp/Components/Questions/TableQuestion.razor
@@ -13,17 +13,17 @@ else
     @* La tabella delle questions *@
     <div class="mt-4 m-5">
 
-        <RadzenFieldset Text="Possibili Scelte" class="shadow rounded" Style="font-weight:400;">
+        <RadzenFieldset Text="Domande" class="shadow rounded" Style="font-weight:400;">
             <RadzenButton Icon="add" Text="Nuovo" ButtonStyle="ButtonStyle.Primary" class="ButtonAdd"
                           Style="margin-bottom:2rem;margin-top:1rem;" Click="@(()=>OpenNewForm())" />
-            <RadzenDataGrid @ref="grid" TItem="QuestionModel" GridLines="@DataGridGridLines.Both" IsLoading=@isLoading Count="@count" PageSize="@pageSize" Data="@list"
+            <RadzenDataGrid @ref="grid" TItem="QuestionModel" GridLines="@DataGridGridLines.Both" IsLoading=@isLoading Count="@count" PageSize="@pageSize" Data="@questions"
                             AllowColumnResize="true" AllowAlternatingRows="true" ColumnWidth="200px" AllowFiltering="true" FilterMode="FilterMode.Simple"
                             AllowSorting="true" AllowPaging="true" ShowPagingSummary="true" PagingSummaryFormat="@pagingSummaryFormat" PagerHorizontalAlign="HorizontalAlign.Left">
 
                 <Columns>
                     <RadzenDataGridColumn TItem="QuestionModel" Property="Id" Title="Id" Width="40px" />
-                    <RadzenDataGridColumn TItem="QuestionModel" Property="Tag" Title="Nome" Width="100px" />
-                    <RadzenDataGridColumn TItem="QuestionModel" Property="Value" Title="Scelta" />
+                    <RadzenDataGridColumn TItem="QuestionModel" Property="Text" Title="Nome" Width="100px" />
+                    <RadzenDataGridColumn TItem="QuestionModel" Property="Choices" Title="Scelta" />
                     <RadzenDataGridColumn TItem="QuestionModel" Title="Azioni" Width="60px" Sortable="false">
                         <Template Context="data">
                             @* Mostro i bottoni solo se ho i permessi di modifica *@
