form selection dropdown

--- a/ClientWebApp/Components/FormCompilation/FormCompilation.razor
+++ b/ClientWebApp/Components/FormCompilation/FormCompilation.razor
@@ -13,6 +13,9 @@ else
     <h2>@Param</h2>
     
     <div class="mt-4 m-5">
+        <div class="pb-3 pt-3">
+        Seleziona questionario: <RadzenDropDown @bind-Value=@CurrentSelection Data=@DocumentsList Change="@(() => OnDocumentSelected())" Style="width: 100%; max-width: 100px;" Name="DropDownDocumentValue"/>
+        </div>
         <RadzenFieldset Text="Questionario" class="shadow rounded" Style="font-weight:400;">
         @foreach(var category in documentModel.Categories)
         {
