--- a/ClientWebApp/Components/Categories/TableCategories.razor
+++ b/ClientWebApp/Components/Categories/TableCategories.razor
@@ -18,12 +18,15 @@ else
         <RadzenFieldset Text="Categorie" class="shadow rounded" Style="font-weight:400;">
             <RadzenButton Icon="add" Text="Nuovo" ButtonStyle="ButtonStyle.Primary" class="ButtonAdd"
                           Style="margin-bottom:2rem;margin-top:1rem;" Click="@(()=>OpenNewForm())" />
+            <RadzenButton Icon="sort" Text="Ordina" ButtonStyle="ButtonStyle.Primary" class="ButtonAdd"
+                          Style="margin-bottom:2rem;margin-top:1rem;" Click="@(()=>OpenOrderForm())" />
             <RadzenDataGrid @ref="grid" GridLines="@DataGridGridLines.Both" IsLoading=@isLoading Count="@count" PageSize="@pageSize" Data="@categories" TItem="CategoryModel"
                             AllowColumnResize="true" AllowAlternatingRows="true" ColumnWidth="200px" AllowFiltering="true" FilterMode="FilterMode.Simple"
                             AllowSorting="true" AllowPaging="true" ShowPagingSummary="true" PagingSummaryFormat="@pagingSummaryFormat" PagerHorizontalAlign="HorizontalAlign.Left">
 
                 <Columns>
                     <RadzenDataGridColumn TItem="CategoryModel" Property="Id" Title="Id" Width="40px" />
+                    <RadzenDataGridColumn TItem="CategoryModel" Property="Order" Title="N." Width="40px" />
                     <RadzenDataGridColumn TItem="CategoryModel" Property="Text" Title="Nome" />
 
                     <RadzenDataGridColumn TItem="CategoryModel" Title="Azioni" Width="60px" Sortable="false">
