--- a/ClientWebApp/Components/FormCreation/FormCreation.razor
+++ b/ClientWebApp/Components/FormCreation/FormCreation.razor
@@ -26,23 +26,33 @@ else
         <RadzenFieldset Text="Seleziona le domande" Style="font-weight:400;">
             @foreach (var g in groups)
             {
-                <div class="card shadow m-2 p-2 pt-3">
-                    <RadzenRow>
-                        <RadzenCheckBox TValue="bool?" TriState="true" @bind-Value="g.State" Style="margin-top: 0.2rem;" Change="@(args=> ChangeCheckBoxCategory(args, g))" />
-                        <RadzenText TextStyle="TextStyle.DisplayH6"><strong>@CategoryText(g)</strong></RadzenText>
+                <div class="m-2 p-2 pt-3">
+                    <RadzenRow class="bordoInferiore" Style="justify-content:space-between !important;">
+                        <RadzenColumn Size="11" Style="display:flex">
+                            <RadzenCheckBox TValue="bool?" TriState="true" @bind-Value="g.State" Style="margin-top: 0.2rem;" Change="@(args=> ChangeCheckBoxCategory(args, g))" />
+                            <RadzenText TextStyle="TextStyle.DisplayH6" Style="margin-left:1rem;"><strong>@CategoryText(g)</strong></RadzenText>
+                        </RadzenColumn>
+                        <RadzenColumn Size="1" Style="display:flex;justify-content:end;">
+                            <RadzenButton Icon="@AccordionIcon(g)" Variant="Variant.Text" Click="@(()=>ShowQuestions(g))" />
+                        </RadzenColumn>
                     </RadzenRow>
                 </div>
-                <SortableList Id="sortable" GroupNumber="@g.Id" Items="@g.Questions" OnGroupUpdate="@OrderList" Context="item">
-                    <SortableItemTemplate>
-                        <div class="card shadow m-2 p-2 pt-3" style="margin-left:3rem !important;">
-                            <RadzenRow Style="flex-wrap:nowrap !important">
-                                <RadzenCheckBox class="ps-3 fw-normal" TValue="bool" Value="@ValoreCheckBoxQuestion(item.Id, g)" TriState="false"
-                                                Change="@(args => ChangeCheckBoxQuestion(args, item.Id, g))" Style="margin-top: 0.2rem;" />
-                                <RadzenText>@QuestionText(g, item.Text, item.Order)</RadzenText>
-                            </RadzenRow>
-                        </div>
-                    </SortableItemTemplate>
-                </SortableList>
+                @if (g.ShowQuestion)
+                {
+                    <div style="margin-bottom:2rem;">
+                    <SortableList Id="sortable" GroupNumber="@g.Id" Items="@g.Questions" OnGroupUpdate="@OrderList" Context="item">
+                        <SortableItemTemplate>
+                            <div class="card shadow m-2 p-2 pt-3" style="margin-left:3rem !important;">
+                                <RadzenRow Style="flex-wrap:nowrap !important">
+                                    <RadzenCheckBox class="ps-3 fw-normal" TValue="bool" Value="@ValoreCheckBoxQuestion(item.Id, g)" TriState="false"
+                                                    Change="@(args => ChangeCheckBoxQuestion(args, item.Id, g))" Style="margin-top: 0.2rem;" />
+                                    <RadzenText>@QuestionText(g, item.Text, item.Order)</RadzenText>
+                                </RadzenRow>
+                            </div>
+                        </SortableItemTemplate>
+                    </SortableList>
+                    </div>
+                }
             }
         </RadzenFieldset>
         <RadzenButton Icon="add" Text="Crea modulo" ButtonStyle="ButtonStyle.Primary" class="ButtonAdd"
