--- a/AppMAUI/Components/_Imports.razor
+++ b/AppMAUI/Components/_Imports.razor
@@ -10,4 +10,5 @@
 @using Radzen
 @using Radzen.Blazor
 @* Componenti di utilità *@
-@using AppMAUI.Components.Utilities
+@using ConstructionSiteLibrary
+@using ConstructionSiteLibrary.Components.Utilities
