--- a/ConstructionSiteLibrary/Pages/Home.razor
+++ b/ConstructionSiteLibrary/Pages/Home.razor
@@ -2,7 +2,7 @@
 
 
 @page "/"
-<ScreenComponent/>
+<ScreenComponent OnScreenDimensionChanged="@ScreenDimensionChanged" OnScreenSizeChanged="@ScreenSizeChanged" />
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
