--- a/ClientWebApp/_Imports.razor
+++ b/ClientWebApp/_Imports.razor
@@ -9,7 +9,8 @@
 @using ClientWebApp
 @using Radzen
 @using Radzen.Blazor
-@using ClientWebApp.Layout
+@using ConstructionSiteLibrary
+@using ConstructionSiteLibrary.Layout
 @* Componenti di utilità *@
 @*Libreria componenti*@
 
