--- a/AppMAUI/Components/Routes.razor
+++ b/AppMAUI/Components/Routes.razor
@@ -1,6 +1,8 @@
-﻿<Router AppAssembly="@typeof(MauiProgram).Assembly" AdditionalAssemblies="@ImporterPages.LoadAssemblyPages()">
+﻿
+
+<Router AppAssembly="@typeof(MauiProgram).Assembly" AdditionalAssemblies="@ImporterPages.LoadAssemblyPages()">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(Layout.MainLayout)" />
+        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
 </Router>
