--- a/ConstructionSiteLibrary/Pages/Home.razor
+++ b/ConstructionSiteLibrary/Pages/Home.razor
@@ -7,7 +7,6 @@
 
 <h1>Hello, world!</h1>
 
-<RadzenButton Icon="add" Text="ciao"/>
-Welcome to your new app.
+<RadzenButton Icon="add" Text="Fotocamera" Click=@OpenCameraPage/>
 
 <Component1/>
