--- a/AppMAUI/Components/Home.razor
+++ b/AppMAUI/Components/Home.razor
@@ -1,7 +1,7 @@
 ﻿@using ConstructionSiteLibrary.Model
 
 
-@page "/home"
+@page "/"
 <ScreenComponent OnScreenSizeChanged="@ScreenSizeChanged"  OnScreenDimensionChanged="@ScreenDimensionChanged"/>
 <PageTitle>Home</PageTitle>
 
