modifiche alla visualizzazione foto

--- a/ConstructionSiteLibrary/Pages/Home.razor
+++ b/ConstructionSiteLibrary/Pages/Home.razor
@@ -12,7 +12,7 @@
 
 @if(!string.IsNullOrEmpty(PhotoPath))
 {
-    <img src="@PhotoPath" />
+    <img src="@PhotoPath" width="200" height="200" />
     @*<RadzenImage Path="@PhotoPath" Style="width: 15rem;" AlternateText="url image" />*@
 }
 
