--- a/ConstructionSiteLibrary/Pages/Home.razor
+++ b/ConstructionSiteLibrary/Pages/Home.razor
@@ -7,7 +7,7 @@
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
-
+<img src="images/Paolo.png" width="400" height="400" />
 <RadzenButton Icon="add" Text="Fotocamera" Click=@OpenCameraPage/>
 
 @if(!string.IsNullOrEmpty(PhotoPath))
