implementazione vuota servizio ICamera su WebApp

--- a/ClientWebApp/_Imports.razor
+++ b/ClientWebApp/_Imports.razor
@@ -11,6 +11,7 @@
 @using Radzen.Blazor
 @using ConstructionSiteLibrary
 @using ConstructionSiteLibrary.Layout
+@using ConstructionSiteLibrary.Interfaces
 @* Componenti di utilità *@
 @*Libreria componenti*@
 
