modificato il css della tabella questions

--- a/ConstructionSiteLibrary/Components/Questions/TableQuestion.razor
+++ b/ConstructionSiteLibrary/Components/Questions/TableQuestion.razor
@@ -13,7 +13,7 @@
 else
 {
     @* La tabella delle questions *@
-    <div class="mt-4 m-5">
+    <div class="marginComponent">
 
         <RadzenFieldset Text="Domande" class="shadow rounded" Style="font-weight:400;">
             <RadzenButton Icon="add" Text="Nuovo" ButtonStyle="ButtonStyle.Primary" class="ButtonAdd"
