--- a/ConstructionSiteLibrary/Pages/Home.razor
+++ b/ConstructionSiteLibrary/Pages/Home.razor
@@ -7,13 +7,13 @@
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
-<img src="images/Paolo.png" width="400" height="400" />
+@* <img src="images/Paolo.png" width="400" height="400" />
 <RadzenButton Icon="add" Text="Fotocamera" Click=@OpenCameraPage/>
 
 @if(!string.IsNullOrEmpty(PhotoPath))
 {
     <img src="@PhotoPath" width="200" height="200" />
     <RadzenImage Path="@PhotoPath" Style="width:200px;height:200px;" AlternateText="url image" />
-}
+} *@
 
-<Component1/>
+<SignatureComponent/>
