rimossi ID dalle tabelle

--- a/ConstructionSiteLibrary/Components/Categories/TableCategories.razor
+++ b/ConstructionSiteLibrary/Components/Categories/TableCategories.razor
@@ -26,7 +26,7 @@ else
                             AllowSorting="true" AllowPaging="true" ShowPagingSummary="true" PagingSummaryFormat="@pagingSummaryFormat" PagerHorizontalAlign="HorizontalAlign.Left">
 
                 <Columns>
-                    <RadzenDataGridColumn TItem="CategoryModel" Property="Id" Title="Id" Width="40px" />
+                    @*<RadzenDataGridColumn TItem="CategoryModel" Property="Id" Title="Id" Width="40px" />*@
                     <RadzenDataGridColumn TItem="CategoryModel" Property="Order" Title="N." Width="40px" />
                     <RadzenDataGridColumn TItem="CategoryModel" Property="Text" Title="Nome" />
 
