--- a/ConstructionSiteLibrary/Components/Choices/TableChoice.razor
+++ b/ConstructionSiteLibrary/Components/Choices/TableChoice.razor
@@ -22,7 +22,7 @@ else
                             AllowSorting="true" AllowPaging="true" ShowPagingSummary="true" PagingSummaryFormat="@pagingSummaryFormat" PagerHorizontalAlign="HorizontalAlign.Left">
 
                 <Columns>
-                    <RadzenDataGridColumn TItem="ChoiceModel" Property="Id" Title="Id" Width="40px" />
+                    @*<RadzenDataGridColumn TItem="ChoiceModel" Property="Id" Title="Id" Width="40px" />*@
                     <RadzenDataGridColumn TItem="ChoiceModel" Property="Tag" Title="Nome" Width="100px" />
                     <RadzenDataGridColumn TItem="ChoiceModel" Property="Value" Title="Scelta" />
                     <RadzenDataGridColumn TItem="ChoiceModel" Title="Azioni" Width="60px" Sortable="false">
