--- a/ConstructionSiteLibrary/Components/Questions/TableQuestion.razor
+++ b/ConstructionSiteLibrary/Components/Questions/TableQuestion.razor
@@ -23,7 +23,7 @@ else
                             AllowSorting="true" AllowPaging="true" ShowPagingSummary="true" PagingSummaryFormat="@pagingSummaryFormat" PagerHorizontalAlign="HorizontalAlign.Left">
 
                 <Columns>
-                    <RadzenDataGridColumn TItem="QuestionModel" Property="Id" Title="Id" Width="40px" />
+                    @*<RadzenDataGridColumn TItem="QuestionModel" Property="Id" Title="Id" Width="40px" />*@
                     <RadzenDataGridColumn TItem="QuestionModel" Property="Text" Title="Nome" Width="100px" />
                     <RadzenDataGridColumn TItem="QuestionModel" Property="IdCategory" Title="Categoria" Width="40px" />
                     <RadzenDataGridColumn TItem="QuestionModel" Property="IdSubject" Title="Argomento" Width="40px">
