--- a/ConstructionSiteLibrary/Components/Choices/FormChoice.razor
+++ b/ConstructionSiteLibrary/Components/Choices/FormChoice.razor
@@ -1,5 +1,8 @@
 ﻿@using ConstructionSiteLibrary.Managers
+@using ConstructionSiteLibrary.Repositories
 @inject HttpManager HttpManager
+@inject QuestionRepository QuestionRepository
+
 
 <div class="">
     <RadzenTemplateForm TItem="FormChoiceData" Data=@form Submit=@Save>
