--- a/ConstructionSiteLibrary/Components/Choices/TableChoiceMobile.razor
+++ b/ConstructionSiteLibrary/Components/Choices/TableChoiceMobile.razor
@@ -1,9 +1,10 @@
 ﻿@using ConstructionSiteLibrary.Managers
+@using ConstructionSiteLibrary.Repositories
 @using Shared
 
-@inject HttpManager HttpManager
 @inject DialogService DialogService
 @inject NotificationManager NotificationManager
+@inject QuestionRepository QuestionRepository
 
 
 <ScreenComponent @ref="screenComponent"/>
