--- a/ConstructionSiteLibrary/Components/Categories/TableCategories.razor
+++ b/ConstructionSiteLibrary/Components/Categories/TableCategories.razor
@@ -4,7 +4,7 @@
 @inject CategoriesRepository CategoriesRepository
 @inject DialogService DialogService
 
-<ScreenComponent @ref="screenComponent"/>
+<ScreenComponent @ref="screenComponent" />
 @if (initialLoading)
 {
     <Loading />
@@ -32,11 +32,13 @@ else
 
                     <RadzenDataGridColumn TItem="CategoryModel" Title="Azioni" Width="60px" Sortable="false">
                         <Template Context="data">
-                            @* Mostro i bottoni solo se ho i permessi di modifica *@
-                            <RadzenButton Icon="edit" ButtonStyle="ButtonStyle.Light" Variant="Variant.Filled" Size="ButtonSize.Large"
-                                          Click="@(()=>OpenUpdateForm(data))" class="buttonEdit" Style="width: 50%;" />
-                            <RadzenButton Icon="delete" ButtonStyle="ButtonStyle.Light" Variant="Variant.Filled" Size="ButtonSize.Large"
-                                          Click="@(()=>Hide(data))" class="buttonDelete" Style="width: 50%;" />
+                            <RadzenRow JustifyContent="JustifyContent.SpaceAround">
+                                @* Mostro i bottoni solo se ho i permessi di modifica *@
+                                <RadzenButton Icon="edit" ButtonStyle="ButtonStyle.Light" Variant="Variant.Filled" Size="ButtonSize.Large"
+                                              Click="@(()=>OpenUpdateForm(data))" class="buttonEdit" Style="width: 45%;" />
+                                <RadzenButton Icon="delete" ButtonStyle="ButtonStyle.Light" Variant="Variant.Filled" Size="ButtonSize.Large"
+                                              Click="@(()=>Hide(data))" class="buttonDelete" Style="width: 45%;" />
+                            </RadzenRow>
                         </Template>
                     </RadzenDataGridColumn>
                 </Columns>
