--- a/ConstructionSiteLibrary/Components/Choices/TableChoice.razor
+++ b/ConstructionSiteLibrary/Components/Choices/TableChoice.razor
@@ -5,7 +5,7 @@
 @inject NotificationManager NotificationManager
 
 
-<ScreenComponent @ref="screenComponent"/>
+<ScreenComponent @ref="screenComponent" />
 @if (initialLoading)
 {
     <Loading />
@@ -27,11 +27,13 @@ else
                     <RadzenDataGridColumn TItem="ChoiceModel" Property="Value" Title="Scelta" />
                     <RadzenDataGridColumn TItem="ChoiceModel" Title="Azioni" Width="60px" Sortable="false">
                         <Template Context="data">
-                            @* Mostro i bottoni solo se ho i permessi di modifica *@
-                            <RadzenButton Icon="edit" ButtonStyle="ButtonStyle.Light" Variant="Variant.Filled" Size="ButtonSize.Large"
-                                          Click="@(()=>OpenUpdateForm(data))" class="buttonEdit" Style="width: 50%;" />
-                            <RadzenButton Icon="delete" ButtonStyle="ButtonStyle.Light" Variant="Variant.Filled" Size="ButtonSize.Large"
-                                          Click="@(()=>Disable(data))" class="buttonDelete" Style="width: 50%;" />
+                            <RadzenRow JustifyContent="JustifyContent.SpaceAround">
+                                @* Mostro i bottoni solo se ho i permessi di modifica *@
+                                <RadzenButton Icon="edit" ButtonStyle="ButtonStyle.Light" Variant="Variant.Filled" Size="ButtonSize.Large"
+                                              Click="@(()=>OpenUpdateForm(data))" class="buttonEdit" Style="width: 45%;" />
+                                <RadzenButton Icon="delete" ButtonStyle="ButtonStyle.Light" Variant="Variant.Filled" Size="ButtonSize.Large"
+                                              Click="@(()=>Disable(data))" class="buttonDelete" Style="width: 45%;" />
+                            </RadzenRow>
                         </Template>
                     </RadzenDataGridColumn>
                 </Columns>
