--- a/ConstructionSiteLibrary/Components/Questions/TableQuestion.razor
+++ b/ConstructionSiteLibrary/Components/Questions/TableQuestion.razor
@@ -33,11 +33,13 @@ else
                     </RadzenDataGridColumn>
                     <RadzenDataGridColumn TItem="QuestionModel" Title="Azioni" Width="60px" Sortable="false">
                         <Template Context="data">
-                            @* Mostro i bottoni solo se ho i permessi di modifica *@
-                            <RadzenButton Icon="edit" ButtonStyle="ButtonStyle.Light" Variant="Variant.Filled" Size="ButtonSize.Large"
-                                          Click="@(()=>OpenUpdateForm(data))" class="buttonEdit" Style="width: 50%;" />
-                            <RadzenButton Icon="delete" ButtonStyle="ButtonStyle.Light" Variant="Variant.Filled" Size="ButtonSize.Large"
-                                          Click="@(()=>Disable(data))" class="buttonDelete" Style="width: 50%;" />
+                            <RadzenRow JustifyContent="JustifyContent.SpaceAround">
+                                @* Mostro i bottoni solo se ho i permessi di modifica *@
+                                <RadzenButton Icon="edit" ButtonStyle="ButtonStyle.Light" Variant="Variant.Filled" Size="ButtonSize.Large"
+                                              Click="@(()=>OpenUpdateForm(data))" class="buttonEdit" Style="width: 45%;" />
+                                <RadzenButton Icon="delete" ButtonStyle="ButtonStyle.Light" Variant="Variant.Filled" Size="ButtonSize.Large"
+                                              Click="@(()=>Disable(data))" class="buttonDelete" Style="width: 45%;" />
+                            </RadzenRow>
                         </Template>
                     </RadzenDataGridColumn>
                 </Columns>
