modifiche al css

--- a/ConstructionSiteLibrary/Components/Categories/TableCategories.razor
+++ b/ConstructionSiteLibrary/Components/Categories/TableCategories.razor
@@ -28,8 +28,7 @@ else
                 <Columns>
                     @*<RadzenDataGridColumn TItem="CategoryModel" Property="Id" Title="Id" Width="40px" />*@
                     <RadzenDataGridColumn TItem="CategoryModel" Property="Order" Title="N." Width="40px" />
-                    <RadzenDataGridColumn TItem="CategoryModel" Property="Text" Title="Nome" />
-
+                    <RadzenDataGridColumn TItem="CategoryModel" Property="Text" Title="Nome" Width="120px" />
                     <RadzenDataGridColumn TItem="CategoryModel" Title="Azioni" Width="60px" Sortable="false">
                         <Template Context="data">
                             <RadzenRow JustifyContent="JustifyContent.SpaceAround">
