--- a/ConstructionSiteLibrary/Pages/ChoicesPage.razor
+++ b/ConstructionSiteLibrary/Pages/ChoicesPage.razor
@@ -2,11 +2,11 @@
 @using ConstructionSiteLibrary.Model
 @page "/Choices"
 
-<h3>Choices Page</h3>
+<h3>Scelte</h3>
 
 
 
-<ScreenComponent MediumWith="641" OnScreenDimensionChanged="ScreenDimensionObserver" />
+<ScreenComponent MediumWith="800" OnScreenDimensionChanged="ScreenDimensionObserver" />
 
 <DynamicComponent @ref=dynamicComponent Type=@selectedType />
 
