--- a/ConstructionSiteLibrary/Pages/Home.razor
+++ b/ConstructionSiteLibrary/Pages/Home.razor
@@ -4,9 +4,13 @@
 
 @page "/"
 <ScreenComponent OnScreenSizeChanged="@ScreenSizeChanged"  OnScreenDimensionChanged="@ScreenDimensionChanged"/>
-<PageTitle>Home</PageTitle>
+<PageTitle>Construction Site Report</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Construction Site Report</h1>
+<p style="margin-top:2rem;font-size: large;">
+    Benvenuto nella tua app per la gestione di documenti della sicurezza!<br/>
+    Qui puoi creare, personalizzare e compilare i documenti in base alle tue necessità e a quelle del cliente.
+</p>
 @* <img src="images/Paolo.png" width="400" height="400" />
 <RadzenButton Icon="add" Text="Fotocamera" Click=@OpenCameraPage/>
 
@@ -16,4 +20,4 @@
     <RadzenImage Path="@PhotoPath" Style="width:200px;height:200px;" AlternateText="url image" />
 } *@
 
-<SignatureComponent DebugImage="true"/>
+@* <SignatureComponent DebugImage="true"/> *@
