--- a/ConstructionSiteLibrary/Pages/QuestionPage.razor
+++ b/ConstructionSiteLibrary/Pages/QuestionPage.razor
@@ -3,9 +3,9 @@
 
 @page "/questions"
 
-<h3>QuestionPage</h3>
+<h3>Domande</h3>
 
-<ScreenComponent MediumWith="641" OnScreenDimensionChanged="ScreenDimensionObserver" />
+<ScreenComponent MediumWith="800" OnScreenDimensionChanged="ScreenDimensionObserver" />
 
 <DynamicComponent @ref=dynamicComponent Type=@selectedType/>
 
