--- a/ConstructionSiteLibrary/Pages/Home.razor
+++ b/ConstructionSiteLibrary/Pages/Home.razor
@@ -11,13 +11,12 @@
     Benvenuto nella tua app per la gestione di documenti della sicurezza!<br/>
     Qui puoi creare, personalizzare e compilare i documenti in base alle tue necessità e a quelle del cliente.
 </p>
-@* <img src="images/Paolo.png" width="400" height="400" />
+@* <img src="images/Paolo.png" width="400" height="400" /> *@
 <RadzenButton Icon="add" Text="Fotocamera" Click=@OpenCameraPage/>
 
 @if(!string.IsNullOrEmpty(PhotoPath))
 {
     <img src="@PhotoPath" width="200" height="200" />
     <RadzenImage Path="@PhotoPath" Style="width:200px;height:200px;" AlternateText="url image" />
-} *@
-
-@* <SignatureComponent DebugImage="true"/> *@
+} 
+ @* <SignatureComponent DebugImage="true"/>  *@
