--- a/ConstructionSiteLibrary/Layout/NavMenu.razor
+++ b/ConstructionSiteLibrary/Layout/NavMenu.razor
@@ -71,6 +71,15 @@
                 }
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link navItem-size" href="test">
+                <span class="bi bi-database @biClassRules" aria-hidden="true"></span>
+                @if (!@IconMenuActive)
+                {
+                    <label>Test</label>
+                }
+            </NavLink>
+        </div>
     </nav>
 </div>
 
